--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -13,9 +13,10 @@ body
 	width:100%;
 	color:#CCC;
 	background:#333;
-	padding:20px;
+	padding-left: 15px;
     z-index: 2;
     opacity: 0.8;
+    height: 70px;
 }
 
 .fixedFooter
@@ -29,6 +30,8 @@ body
 	padding:20px;
     z-index: 2;
     opacity: 0.8;
+    height: 10px;
+    font-family: Copperplate, 'Copperplate Gothic Light', fantasy;
 }
 
 .navigationButton 
@@ -42,13 +45,16 @@ body
     font-size: 22px;
     font-weight: 700;
     font-family: Copperplate, 'Copperplate Gothic Light', fantasy;
+    text-decoration: none;
+    border-bottom: solid 5px #414042;
+    line-height: 50px;
 }
 
 .textContainer
 {
     position: fixed;
     width :600px;
-    font-family: "Arial Black", Gadget, sans-serif;
+    font-family: Copperplate, 'Copperplate Gothic Light', fantasy;
     left: 100px;
     top: 350px;
     font-size: 60;
